Add message container, update README

--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
     </li>
   </ul>
 
+  <p id="message"></p>
+
   <script src="register-sw.js"></script>
   <script src="notification.js"></script>
   <script src="a2hs.js"></script>
