Add postMessage between service worker and browser

--- a/index.html
+++ b/index.html
@@ -44,5 +44,6 @@
   <script src="a2hs.js"></script>
   <script src="push.js"></script>
   <script src="sensors.js"></script>
+  <script src="sw-messages.js"></script>
 </body>
 </html>
