Update README, style and clean up

--- a/index.html
+++ b/index.html
@@ -10,9 +10,15 @@
 </head>
 <body>
   <h1>PWA Demo App</h1>
-
-  <p>The following page will display functionality such as:</p>
+  <p>
+    With browser modernization comes good PWA support.<br>
+    With PWA support, we can write apps that work nicely on mobile devices and
+    also integrate into native landscape.<br>
+    This page aims to show how we can install the app, run it offline and send
+    notifications to the user.
+  </p>
   <ul>
+    The following page will display functionality such as:
     <li>Offline Mode</li>
     <li>
       Add to Home Screen
@@ -31,9 +37,6 @@
       <button onclick="subscribe()">
         Receive push!
       </button>
-    </li>
-    <li>
-      Sensors Access?
     </li>
   </ul>
 
